# SecurityCamera

./: .gitignore  CMakeLists.txt  CMakePresets.json  arm64-toolchain.cmake  download-toolchain.cmake
include/: sample.h
scripts/: arm64-toolchain.cmake  build.py  deploy.py  download-toolchain.cmake  run.py
src/: CMakeLists.txt  sample.cpp
test/: CMakeLists.txt  sample_test.cpp
